Squashable commit; revamps completion lock strategy
Signed-off-by: Laird Nelson <ljnelson@gmail.com>