@@ -56,4 +56,21 @@
 
   </dependencies>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <argLine>
+              --add-opens jdk.compiler/com.sun.tools.javac.comp=org.microbean.lang
+              --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
+              --enable-preview
+            </argLine>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 </project>
